@@ -5,33 +5,39 @@ import com.pl.PlayQuest.dto.VideogameDto;
 import com.pl.PlayQuest.model.Videogame;
 import com.pl.PlayQuest.repo.VideogameRepository;
 import com.pl.PlayQuest.mapper.VideogameMapper;
-import lombok.Data;
+import com.pl.PlayQuest.security.JwtUtil;
+import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 @Service
+@RequiredArgsConstructor
 public class RecommendationService {
 
     private final VideogameRepository videogameRepository;
+    private final JwtUtil jwtUtil;
 
-    public RecommendationService(VideogameRepository videogameRepository) {
-        this.videogameRepository = videogameRepository;
+    public List<GameRecommendationDto> getRecommendationsForLoggedUser(
+            String authHeader,
+            int limit) {
+
+        String token = authHeader.substring(7);
+        Long userId = jwtUtil.getUserIdFromToken(token);
+
+        return videogameRepository
+                .findRecommendedGames(userId, PageRequest.of(0, limit))
+                .stream()
+                .map(this::toRecommendationDto)
+                .toList();
     }
 
-    public List<GameRecommendationDto> getRecommendationsForUser(Long userId, int limit) {
-        List<Videogame> games = videogameRepository.findRecommendedGames(userId, PageRequest.of(0, limit));
-        return games.stream()
-                .map(v -> {
-                    GameRecommendationDto dto = new GameRecommendationDto();
-                    dto.setId(v.getId());
-                    dto.setTitle(v.getTitle());
-                    dto.setImageUrl(v.getImageUrl());
-                    dto.setRating(v.getRating());
-                    return dto;
-                })
-                .collect(Collectors.toList());
+    public List<GameRecommendationDto> getTopGamesForGuest(int limit) {
+        return videogameRepository
+                .findTopSellingGames(PageRequest.of(0, limit))
+                .stream()
+                .map(this::toRecommendationDto)
+                .toList();
     }
 
     public List<VideogameDto> getByCategory(String category) {
@@ -40,4 +46,14 @@ public class RecommendationService {
                 .map(VideogameMapper::toDto)
                 .toList();
     }
+
+    private GameRecommendationDto toRecommendationDto(Videogame v) {
+        return new GameRecommendationDto(
+                v.getId(),
+                v.getTitle(),
+                v.getImageUrl(),
+                v.getRating()
+        );
+    }
 }
+
